# scan-examples

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  scan-docs.md  worklog.md
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  nightly-rust-release.yml  tests.yml
openspec/changes/additional-cve-enrichment/: proposal.md  tasks.md
openspec/changes/additional-cve-enrichment/specs/openvas-scanner-rest-api-example/: spec.md
openspec/changes/authenticated-ssh-e2e/: proposal.md  tasks.md
openspec/changes/authenticated-ssh-e2e/specs/openvas-scanner-rest-api-example/: spec.md
openspec/changes/e2e-verbose-output/: proposal.md  tasks.md
openspec/changes/feed-result-enrichment/: proposal.md  tasks.md
openspec/changes/feed-result-enrichment/specs/openvas-scanner-rest-api-example/: spec.md
openspec/changes/metasploitable-target/: proposal.md  tasks.md
openspec/changes/metasploitable-target/specs/openvas-scanner-rest-api-example/: spec.md
openspec/changes/openvas-scanner-rest-api-example/: proposal.md  tasks.md
openspec/changes/repository-mit-license/: proposal.md  tasks.md
openspec/changes/rust-result-enrichment/: proposal.md  tasks.md
openspec/specs/openvas-scanner-rest-api-example/: spec.md
rust/scan-enrichment/: Cargo.toml
rust/scan-enrichment/src/: lib.rs  main.rs
scripts/: benchmark_enrichment.py  generate_synthetic_results.py
src/scan_examples/: __init__.py  cli.py  client.py  conversion.py  e2e.py  enrichment.py  feed.py  python_gvm_client.py
tests/: test_cli.py  test_client.py  test_compose_feed_sync.py  test_conversion.py  test_e2e.py  test_enrichment_cli.py  test_feed.py  test_python_gvm_client.py
tests/data/enrichment-parity/: raw-scan-results.json  scap.json  vt-metadata.json
tests/data/enrichment-parity/notus/: example_os.notus
(+1 files in other folders)
