[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-examples"
version = "0.1.0"
description = "Python example code for the OpenVAS Scanner container REST API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
]

[project.scripts]
openvas-example = "scan_examples.cli:main"
openvas-enrich-results = "scan_examples.enrichment:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
