[package]
name = "scan-enrichment"
version = "0.1.0"
edition = "2021"

[lib]
name = "scan_enrichment"
path = "src/lib.rs"

[[bin]]
name = "scan-enrich-results"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
